# usb_board

./: .gitignore  README.md  usb board.OutJob  usb board.PcbDoc  usb board.PcbLib  usb board.PrjPcb  usb board.SchDoc  usb board.SchLib  usb board.cam  usb board.xls
basic_test/: .cproject  .mxproject  .project  STM32F072CBTx_FLASH.ld  basic_test.ioc  basic_test.xml
basic_test/Core/Inc/: main.h  stm32f0xx_hal_conf.h
basic_test/Core/Src/: main.c  system_stm32f0xx.c
gerbers/: usb board.GBL  usb board.GBS  usb board.GKO  usb board.GTL  usb board.GTO  usb board.GTS  usb board.TXT
test_test/: .cproject  .project  LinkerScript.ld
test_test/startup/: startup_stm32.s
usb_test/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Makefile  STM32F072CBTX.ld  arm-none-eabi-gcc.cmake  arm-none-eabi.cmake  arm_none_eabi_gcc.cmake  cortexm0_exceptions.hpp  cortexm0_nvic.hpp  cortexm0_scb.hpp  cortexm0_special_regs.hpp  cortexm0_sys_tick.hpp  default_handler.cpp  fault_isrs.cpp  gcc-arm-none-eabi.cmake  linker_symbols.cpp  linker_symbols.hpp  main.cpp  reset_handler.cpp  reset_isr.cpp  rtos_api.cpp  rtos_api.hpp  rtos_isrs.cpp  rtos_kernel.cpp  rtos_kernel.hpp  rtos_svc_numbers.hpp  usb_test Debug.cfg  usb_test.ioc  usb_test.ld  usb_test.xml  utils.hpp  vectors_table.cpp  vectors_table.s
usb_test/Core/Inc/: stm32f0xx_hal_conf.h  stm32f0xx_it.h
usb_test/Core/Src/: gpio.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
usb_test/Src/: default_handler.cpp  default_handler.s  isr_vectors.s  reset_handler.s
usb_test/USB_DEVICE/App/: usbd_desc.c
usb_test/cortexm0/: exceptions.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
usb_test/rtos/: isrs.cpp  isrs.hpp  kernel.cpp  kernel.hpp  svc_numbers.hpp  threads.cpp  threads.hpp
usb_test/src/: default_handler.s  isr_vectors.s  reset_handler.s
